Fixed some container styling on mobile

--- a/src/components/mobile/HomeScreen.scss
+++ b/src/components/mobile/HomeScreen.scss
@@ -4,7 +4,7 @@ $icon-size: 54px;
 
 :local(.container) {
   @include no-select();
-  height: 100%;
+  flex: 1 1;
   padding: 20px 10px;
   box-sizing: border-box;
   background-image: url('../../../img/mobile_wallpaper.jpg');
