--- a/src/components/mobile/MobileAudio.scss
+++ b/src/components/mobile/MobileAudio.scss
@@ -7,7 +7,6 @@ $text-color: #333;
   @include no-select();
   background-color: #FFF;
   width: 100%;
-  height: 100%;
 
   .picture {
     @include background-image(linear-gradient(to bottom, #FFF, #d0f0ff, #FFF));
@@ -48,7 +47,7 @@ $text-color: #333;
   }
   .controls {
     width: 96%;
-    margin: 20px auto;
+    margin: 20px auto 0 auto;
     text-align: center;
     display: flex;
     i.fa {
